--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/02/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/02/mysol_1/index.html
@@ -55,7 +55,7 @@
     }
 
     function multipleCase() {
-      let color = "Red";
+      let color = "Gray";
 
       switch (color) {
         case "Red":
