--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/02/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/02/mysol_1/index.html
@@ -102,7 +102,7 @@
         case 1:
           console.log("HL Road Frame - Black, 58");
           break;
-        case 2:
+        case '2':
           console.log("Sport-100 Helmet, Red");
           break;
         case 3:
