--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/04/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/04/mysol_1/index.html
@@ -50,6 +50,7 @@
       console.log("price = " + price.toString());
       result = ++price;
       console.log("result = ++price = " + result.toString());
+      console.log("price = " + price.toString());
 
       // Decrement
       result = price--;
