--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/04/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/04/mysol_1/index.html
@@ -73,7 +73,9 @@
       console.log("result (number + string) = " + result.toString());
 	  
       result = price + (+stringValue);
+      var result2 = price + parseInt(stringValue);
       console.log("result (number + (+stringValue)) = " + result.toString());
+      console.log("result (number + parseInt(stringValue)) = " + result2.toString());
     }
 
     // Assignment Operators
