--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/04/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/04/mysol_1/index.html
@@ -162,7 +162,7 @@
 	
     // Illustrate usage of 'use strict'
     function useStrictSample() {
-      'use strict' // Comment out this line to see the following code work
+      // 'use strict' // Comment out this line to see the following code work
 
       // Can't use a variable without 'var' or 'let' keywords
       result = 10;
