--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/07/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/07/mysol_1/index.html
@@ -46,6 +46,7 @@
       let product = _products[0];
       let introDate = new Date();
       let strValue = new String();
+      let arrayValue = new Array();
       let isActive = false;
       let result;
       let value = null;
@@ -55,6 +56,7 @@
       console.log("product.productID = " + typeof product.productID);
       console.log("product.productNumber = " + typeof product.productNumber);
       console.log("strValue = " + typeof strValue);
+      console.log("arrayValue = " + typeof arrayValue);
       console.log("introDate = " + typeof introDate);  // Dates are objects
       console.log("isActive = " + typeof isActive);
       console.log("result = " + typeof result);
