--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/07/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/07/mysol_1/index.html
@@ -112,8 +112,7 @@
 
     // Using the instanceof operator
     function instanceofSample() {
-      let prod = new Product(680, "HL Road Frame - Black, 58",
-        "FR-R92B-58");
+      let prod = new Product(680, "HL Road Frame - Black, 58", "FR-R92B-58");
       let dt = new Date();
       let name = new String("Product Name");
       let value = "A simple string";
