--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/08/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/08/mysol_1/index.html
@@ -18,7 +18,7 @@
   <button onclick="constructorFunctions();">Constructor Functions</button>
 
   <script>
-    // 'use strict';
+    'use strict';
   
     // Global scope - 'this' is mapped to global/window object
     console.log("Begin: global scope sample");
