--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/08/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/08/mysol_1/index.html
@@ -18,7 +18,7 @@
   <button onclick="constructorFunctions();">Constructor Functions</button>
 
   <script>
-    // 'use strict';
+    'use strict';
   
     // Global scope - 'this' is mapped to global/window object
     console.log("Begin: global scope sample");
@@ -29,7 +29,8 @@
     // Function scope - 'this' is mapped to global/window object
     //                  Uncomment 'use strict' above to show how it affects this function
     function functionScope() {      
-      console.log(this.toString());
+      // console.log(this.toString());
+      console.log(window.toString());
       console.log("this === window = " + (this === window).toString());
     }
 	
