--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/09/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Syntax and Operators/javascript-syntax-operators/09/mysol_1/index.html
@@ -49,22 +49,23 @@
       }
     ];
 
-    let _newProducts = [{
-      productID: 712,
-      name: "AWC Logo Cap",
-      productNumber: "CA-1098",
-      color: "Multi",
-      standardCost: 6.9223,
-      listPrice: 8.99
-    },
-    {
-      productID: 821,
-      name: "Touring Front Wheel",
-      productNumber: "FW-T905",
-      color: "Black",
-      standardCost: 96.7964,
-      listPrice: 218.01
-    }
+    let _newProducts = [
+      {
+        productID: 712,
+        name: "AWC Logo Cap",
+        productNumber: "CA-1098",
+        color: "Multi",
+        standardCost: 6.9223,
+        listPrice: 8.99
+      },
+      {
+        productID: 821,
+        name: "Touring Front Wheel",
+        productNumber: "FW-T905",
+        color: "Black",
+        standardCost: 96.7964,
+        listPrice: 218.01
+      }
     ];
 
     // String to array
