--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Arrays and Collections/javascript-arrays-collections/02/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Arrays and Collections/javascript-arrays-collections/02/mysol_1/index.html
@@ -52,6 +52,7 @@
 				<div class="graphSec px-2">
 					<h4 class="text-center py-3">Department Sales</h4>
 					<!-- Dept Sales -->
+					<canvas id="deptSales" width="400" height="300"></canvas>
 				</div>
 			</div>
 		</div>
