--- a/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Arrays and Collections/javascript-arrays-collections/02/mysol_1/index.html
+++ b/Paths/Frontend_Dev/JavaScript Core Language/JavaScript Arrays and Collections/javascript-arrays-collections/02/mysol_1/index.html
@@ -64,6 +64,11 @@
 			<h3>Recent Sales</h3>
 			<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModal"><span
 					class="oi oi-plus pr-2"></span>Add Sale</button>
+
+			<button type="button" class="btn btn-outline-success" onclick="findOver1000()"><span class="oi oi-plus pr-2"></span>Find Over $1000</button>
+
+			<button type="button" class="btn btn-outline-success" onclick="resetNum()"><span class="oi oi-plus pr-2"></span>Reset to 0</button>
+			
 		</div>
 
 		<!-- New Sales View -->
