--- a/Paths/Frontend_Dev/Misc/RxJS/RxJS - The Big Picture/rxjs-big-picture/05/mysol_1/index.html
+++ b/Paths/Frontend_Dev/Misc/RxJS/RxJS - The Big Picture/rxjs-big-picture/05/mysol_1/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>RxJS Demo</title>
-  <script src="index.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>RxJS Demo</title>
+    <style>
+        body { font-family: 'Arial'; background: lightgray }
+        ul { list-style-type: none; padding: 20px; }
+        li { padding: 15px; background: lightcoral; margin-bottom: 10px; }
+    </style>
 </head>
 <body>
-<h1>RxJS Demo</h1>
+    <h1>RxJS Demo</h1>
+    <div>
+        <ul id="list"></ul>
+    </div>
+    <script src="/bundle.js"></script>
 </body>
-</html>
