--- a/Paths/Frontend_Dev/Misc/CSS/Hands on Responsive Design Using a CSS Preprocessor/hands-on-responsive-design-css-preprocessor/4-hands-on-responsive-design-css-preprocessor-m4-exercise-files/mysol_1/Aspen Dental Web Site/index.html
+++ b/Paths/Frontend_Dev/Misc/CSS/Hands on Responsive Design Using a CSS Preprocessor/hands-on-responsive-design-css-preprocessor/4-hands-on-responsive-design-css-preprocessor-m4-exercise-files/mysol_1/Aspen Dental Web Site/index.html
@@ -19,7 +19,7 @@
 
 
 <!-- *************** STYLE SHEETS ****************** -->
-<link href="css/styles.css" rel="stylesheet">
+<link href="dist/css/styles.min.css" rel="stylesheet">
 
 
 
